--- a/static/index.html
+++ b/static/index.html
@@ -12,11 +12,13 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
-            color: #1a1a1a;
-            line-height: 1.6;
+            font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'Segoe UI', 'Helvetica Neue', sans-serif;
+            background: #ffffff;
+            color: #000000;
+            line-height: 1.5;
             min-height: 100vh;
+            font-size: 13px;
+            letter-spacing: -0.01em;
         }
 
         .container {
@@ -26,12 +28,12 @@
         }
 
         .header {
-            background: #ffffff;
-            border-bottom: 1px solid #e0e0e0;
-            padding: 20px 0;
+            background: #000000;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+            padding: 0;
             position: sticky;
             top: 0;
-            z-index: 100;
+            z-index: 1000;
             backdrop-filter: blur(10px);
         }
 
@@ -39,36 +41,69 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 12px 40px;
+            max-width: 1400px;
+            margin: 0 auto;
+        }
+
+        .logo-section {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .logo-section img {
+            height: 28px;
+            width: auto;
+            filter: brightness(0) invert(1);
+            opacity: 0.9;
+            transition: opacity 0.2s;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 6px;
+            padding: 4px 8px;
+            background: rgba(255, 255, 255, 0.05);
+        }
+
+        .logo-section img:first-child,
+        .logo-section img:last-child {
+            height: 34px;
+        }
+
+        .logo-section img:hover {
+            opacity: 1;
         }
 
         .logo {
-            font-size: 28px;
-            font-weight: 700;
-            color: #1a1a1a;
-            letter-spacing: -0.5px;
+            font-size: 15px;
+            font-weight: 600;
+            color: #ffffff;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
         }
 
         .tagline {
-            font-size: 14px;
-            color: #666;
-            margin-top: 4px;
+            font-size: 11px;
+            color: rgba(255,255,255,0.6);
+            margin-top: 2px;
             font-weight: 400;
         }
 
         .status-indicator {
             display: flex;
             align-items: center;
-            gap: 8px;
-            padding: 8px 16px;
-            background: #f0f0f0;
-            border-radius: 20px;
-            font-size: 12px;
+            gap: 6px;
+            padding: 6px 14px;
+            background: rgba(255,255,255,0.1);
+            border-radius: 6px;
+            font-size: 11px;
             font-weight: 500;
+            color: #ffffff;
+            border: 1px solid rgba(255,255,255,0.2);
         }
 
         .status-dot {
-            width: 8px;
-            height: 8px;
+            width: 6px;
+            height: 6px;
             border-radius: 50%;
             background: #4caf50;
             animation: pulse 2s infinite;
@@ -90,28 +125,28 @@
         }
 
         .hero-title {
-            font-size: 48px;
-            font-weight: 300;
-            color: #1a1a1a;
-            margin-bottom: 16px;
-            letter-spacing: -1px;
+            font-size: 32px;
+            font-weight: 600;
+            color: #000000;
+            margin-bottom: 12px;
+            letter-spacing: -0.02em;
         }
 
         .hero-subtitle {
-            font-size: 18px;
-            color: #666;
+            font-size: 14px;
+            color: #666666;
             max-width: 600px;
-            margin: 0 auto 40px;
+            margin: 0 auto 32px;
             font-weight: 400;
         }
 
         .form-section {
             background: #ffffff;
-            border-radius: 16px;
-            padding: 40px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-            margin-bottom: 40px;
-            border: 1px solid #f0f0f0;
+            border-radius: 8px;
+            padding: 32px;
+            box-shadow: none;
+            margin-bottom: 32px;
+            border: 1px solid #e0e0e0;
         }
 
         .input-tabs {
@@ -124,23 +159,24 @@
         .tab-button {
             background: none;
             border: none;
-            padding: 12px 24px;
-            font-size: 16px;
+            padding: 10px 20px;
+            font-size: 13px;
             font-weight: 600;
-            color: #666;
+            color: #666666;
             cursor: pointer;
-            transition: all 0.3s ease;
-            border-bottom: 3px solid transparent;
+            transition: all 0.2s ease;
+            border-bottom: 2px solid transparent;
             font-family: inherit;
+            letter-spacing: -0.01em;
         }
 
         .tab-button:hover {
-            color: #1a1a1a;
+            color: #000000;
         }
 
         .tab-button.active {
-            color: #1a1a1a;
-            border-bottom-color: #1a1a1a;
+            color: #000000;
+            border-bottom-color: #000000;
         }
 
         .tab-content {
@@ -543,38 +579,152 @@
                 gap: 16px;
             }
         }
+
+        /* Password Modal */
+        .password-modal {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            backdrop-filter: blur(4px);
+        }
+
+        .password-modal.hidden {
+            display: none;
+        }
+
+        .password-modal-content {
+            background: #ffffff;
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 90%;
+            text-align: center;
+        }
+
+        .password-modal-title {
+            font-size: 20px;
+            font-weight: 600;
+            color: #000000;
+            margin-bottom: 12px;
+            letter-spacing: -0.01em;
+        }
+
+        .password-modal-subtitle {
+            font-size: 13px;
+            color: #666666;
+            margin-bottom: 24px;
+        }
+
+        .password-modal-input {
+            width: 100%;
+            padding: 10px 14px;
+            border: 1px solid #e0e0e0;
+            border-radius: 6px;
+            font-size: 13px;
+            margin-bottom: 16px;
+            font-family: inherit;
+            letter-spacing: -0.01em;
+        }
+
+        .password-modal-input:focus {
+            outline: none;
+            border-color: #000000;
+            box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+        }
+
+        .password-modal-btn {
+            width: 100%;
+            padding: 10px 16px;
+            background: #000000;
+            color: #ffffff;
+            border: none;
+            border-radius: 6px;
+            font-size: 13px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            letter-spacing: -0.01em;
+        }
+
+        .password-modal-btn:hover {
+            background: #333333;
+        }
+
+        .password-error {
+            color: #c62828;
+            font-size: 12px;
+            margin-top: 12px;
+            display: none;
+        }
+
+        .password-error.show {
+            display: block;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <header class="header">
-            <div class="header-content">
+    <!-- Password Protection Modal -->
+    <div id="passwordModal" class="password-modal">
+        <div class="password-modal-content">
+            <div class="password-modal-title">🔒 Access Required</div>
+            <div class="password-modal-subtitle">Enter the password to access the validation system</div>
+            <input 
+                type="password" 
+                id="passwordInput" 
+                class="password-modal-input" 
+                placeholder="Enter password"
+                onkeypress="if(event.key==='Enter') checkPassword()"
+            >
+            <button class="password-modal-btn" onclick="checkPassword()">Unlock</button>
+            <div class="password-error" id="passwordError">Incorrect password. Please try again.</div>
+        </div>
+    </div>
+
+    <!-- Header -->
+    <header class="header">
+        <div class="header-content">
+            <div class="logo-section">
+                <img src="/logos/mockellologo.png" alt="Mockello">
+                <img src="/logos/stacialogo.png" alt="Stacia">
+                <img src="/logos/vencorplogo.png" alt="Vencorp">
                 <div>
-                    <div class="logo">PRAGATI AI</div>
+                    <div class="logo">Pragati AI</div>
                     <div class="tagline">Multi-Agent Validation System</div>
                 </div>
-                <div style="display: flex; align-items: center; gap: 20px;">
-                    <a href="reports.html" style="
-                        text-decoration: none;
-                        color: #1a1a1a;
-                        padding: 8px 20px;
-                        border: 2px solid #1a1a1a;
-                        border-radius: 6px;
-                        font-weight: 600;
-                        font-size: 14px;
-                        transition: all 0.3s ease;
-                    " onmouseover="this.style.background='#1a1a1a'; this.style.color='white'" 
-                       onmouseout="this.style.background='transparent'; this.style.color='#1a1a1a'">
-                        📊 View Reports
-                    </a>
-                    <div class="status-indicator">
-                        <div class="status-dot"></div>
-                        <span>System Online</span>
-                    </div>
+            </div>
+            <div style="display: flex; align-items: center; gap: 16px;">
+                <a href="reports.html" style="
+                    text-decoration: none;
+                    color: #ffffff;
+                    padding: 6px 16px;
+                    background: rgba(255,255,255,0.1);
+                    border: 1px solid rgba(255,255,255,0.2);
+                    border-radius: 6px;
+                    font-weight: 500;
+                    font-size: 12px;
+                    transition: all 0.2s ease;
+                    letter-spacing: -0.01em;
+                " onmouseover="this.style.background='rgba(255,255,255,0.2)'" 
+                   onmouseout="this.style.background='rgba(255,255,255,0.1)'">
+                    📊 Reports
+                </a>
+                <div class="status-indicator">
+                    <div class="status-dot"></div>
+                    <span>Online</span>
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
+
+    <div class="container">
 
         <!-- Main Content -->
         <main class="main-content">
@@ -797,6 +947,44 @@
     </div>
 
     <script>
+        // Password protection
+        const CORRECT_PASSWORD = 'uniquepass321';
+        let isAuthenticated = false;
+
+        // Check if user is authenticated on page load
+        window.addEventListener('load', function() {
+            const authenticated = sessionStorage.getItem('indexPageAuth');
+            if (authenticated === 'true') {
+                isAuthenticated = true;
+                document.getElementById('passwordModal').classList.add('hidden');
+            }
+        });
+
+        function checkPassword() {
+            const password = document.getElementById('passwordInput').value;
+            const errorEl = document.getElementById('passwordError');
+            
+            if (password === CORRECT_PASSWORD) {
+                isAuthenticated = true;
+                sessionStorage.setItem('indexPageAuth', 'true');
+                document.getElementById('passwordModal').classList.add('hidden');
+                document.getElementById('passwordInput').value = '';
+                errorEl.classList.remove('show');
+            } else {
+                errorEl.classList.add('show');
+                document.getElementById('passwordInput').value = '';
+                document.getElementById('passwordInput').focus();
+            }
+        }
+
+        // Block access if not authenticated
+        document.addEventListener('click', function(e) {
+            if (!isAuthenticated && !e.target.closest('#passwordModal')) {
+                e.preventDefault();
+                e.stopPropagation();
+            }
+        }, true);
+
         let currentValidationResult = null;
         let currentPdfUrl = null;
         let eventSource = null;
